- [releng] Remove the dependency to `reflect-metadata`
- [releng] Switch to `subscriptions-transport-ws` 0.11.0


=== Bug fixes

- https://github.com/eclipse-sirius/sirius-web/issues/3515[#3515] [form] Form pages appear in the addition order
- https://github.com/eclipse-sirius/sirius-web/issues/2981[#2981] [diagram] Fix a warning when an edge was hidden

=== New Features

=== Improvements

- https://github.com/eclipse-sirius/sirius-web/issues/3511[#3511] [diagram] Improve edge handle position for border nodes
- https://github.com/eclipse-sirius/sirius-web/issues/2837[#2837] [gantt] Enhance gantt scroll bar management

== v2024.5.0

=== Shapes

- Configurable collapse
- Add support for EMF models migration
- Add support for representations migration
- Add Assertions and Navigators to improve Diagram testability
- Improve document upload
- Configurable visibility
- Create a representation using the content of another representation as input
- Add support for DateTime widget

=== Architectural decision records

- [ADR-139] Add Is Collapsed By Default Expression in NodeDescription entity in the view DSL
- [ADR-140] Add collapse and expand services
- [ADR-141] Factorize GraphQL queries in tests
- [ADR-142] Add report on document upload
- [ADR-143] Handle documents upload with other formats than JSON and XMI
- [ADR-144] Add the support for EMF models migration
- [ADR-145] Add a hook to update nodes in ReactFlow
- [ADR-146] Add support for contributing representation metadata for transient representations
- [ADR-147] Add support for overlapping nodes
- [ADR-148] Improve edge layout
- [ADR-149] Add Default Visibility Fields in View DSL
- [ADR-150] Add hide/reveal/fade/unfade services

=== Deprecation warning

- https://github.com/eclipse-sirius/sirius-web/issues/3279[#3279] Starting with Sirius Web 2024.5.0, every maven modules used by `sirius-web-sample-application` in the `sirius-web` package will be deprecated including `sirius-web-sample-application`.